--- a/pom.xml
+++ b/pom.xml
@@ -57,4 +57,10 @@
 </plugin>
     </plugins>
   </build>
+   <distributionManagement>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://18.208.218.98:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
